// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test AddGoalRadioOption component Should renders active AddGoalRadioOption correctly 1`] = `
<View
  accessible={true}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#ffffff",
      "borderColor": "#0FA858",
      "borderRadius": 10,
      "borderStyle": "solid",
      "borderWidth": 2,
      "flexDirection": "row",
      "height": 50,
      "justifyContent": "center",
      "marginBottom": 10,
      "marginTop": 10,
      "opacity": 1,
      "overflow": "hidden",
      "paddingBottom": 10,
      "paddingTop": 10,
      "width": "100%",
    }
  }
>
  <Text
    style={
      Array [
        Object {
          "color": "#0FA858",
        },
        Object {
          "fontFamily": "Forum-Regular",
          "fontSize": 20,
        },
      ]
    }
  >
    Every Day
  </Text>
</View>
`;

exports[`Test AddGoalRadioOption component Should renders inactive AddGoalRadioOption correctly 1`] = `
<View
  accessible={true}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#ffffff",
      "borderColor": "#636262",
      "borderRadius": 10,
      "borderStyle": "solid",
      "borderWidth": 1,
      "flexDirection": "row",
      "height": 50,
      "justifyContent": "center",
      "marginBottom": 10,
      "marginTop": 10,
      "opacity": 1,
      "overflow": "hidden",
      "paddingBottom": 10,
      "paddingTop": 10,
      "width": "100%",
    }
  }
>
  <Text
    style={
      Array [
        Object {
          "color": "#636262",
        },
        Object {
          "fontFamily": "Forum-Regular",
          "fontSize": 20,
        },
      ]
    }
  >
    Every Day
  </Text>
</View>
`;
